Aqui ajustei para poder rodarmos já a aplicação mainFlask

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %} Homepage {% endblock %}
 {% block formulario %}
     <div style="text-align:center" class="container-fluid">
-        <h2>Teste de CSS e Imagens</h2>
+        <h2>Empresa Confiavel</h2>
         <br>Saudação: {{par1}}
         <br>Cliente: {{par2}}
         <br><br><br>
