--- a/app/templates/catalogo.html
+++ b/app/templates/catalogo.html
@@ -1,3 +1,3 @@
 {% extends "templs/formTemplate.html" %}
-{% block title %} Cadastro de Cliente {% endblock %}
+{% block title %} Catálogo {% endblock %}
 {% block formulario %}
