--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,3 +1,3 @@
 {% extends "templs/formTemplate.html" %}
-{% block title %} Cadastro de Cliente {% endblock %}
+{% block title %} Menu da loja {% endblock %}
 {% block formulario %}
