--- a/app/templates/produto.html
+++ b/app/templates/produto.html
@@ -1,3 +1,3 @@
 {% extends "templs/formTemplate.html" %}
-{% block title %} Cadastro de Cliente {% endblock %}
+{% block title %} Produtos {% endblock %}
 {% block formulario %}
