--- a/app/templates/produtoAdmin.html
+++ b/app/templates/produtoAdmin.html
@@ -1,3 +1,3 @@
 {% extends "templs/formTemplate.html" %}
-{% block title %} Cadastro de Cliente {% endblock %}
+{% block title %} Produto Administrador {% endblock %}
 {% block formulario %}  
