--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -2,7 +2,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .sidebar {
@@ -79,15 +79,24 @@ body, html {
   position: relative;
 }
 
+.site-title {
+  transition: transform 0.3s ease;
+}
+
 .site-title a {
   color: white;
   font-size: 24px;
-  padding-left: 250px;;
-  text-decoration: solid;
+  font-weight: bold;
+  padding-left: 275px;
+  text-decoration: none;
 }
 
 .site-title:hover {
   background-color: rgb(180, 16, 153);
+}
+
+.site-title.move-when-menu-hidden {
+  transform: translateX(-175px);
 }
 
 .search-bar input {
