--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,6 @@
 <body>
 
     <header class="header">
-            
         <div class="site-title">
             <a href="/">Empresa Confiável</a>
         </div>
@@ -21,29 +20,16 @@
         <div class="header-buttons">
             <button class="favorites">Favorites</button>
             <button class="cart">Cart</button>
+                <div class="cart-dropdown">
+                    <p>
+                        This is the cart Dropdown
+                    </p>
+                    <button class="cart-page-button">Go to cart</button>
+                </div>
             <button class="profile">Profile</button>
         </div>
+
     </header>
-
-    <div class="cart-tooltip">
-        <p id="cart-summary">Your cart is empty!</p>
-    </div>
-
-    <div class="profile-tooltip">
-        <p>Dropdown</p>
-    </div>
-
-    <div class="cart-modal">
-        <div class="cart-modal-content">
-            <span class="close">x</span>
-            <h2>Cart Details</h2>
-            <div id="cart-items-list">
-                
-            </div>
-            <button>Proceed to Checkout</button>
-        </div>
-    </div>
-
 
     <div class="sidebar">
         <ul>
