--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -58,6 +58,7 @@ body, html {
   justify-content: center;
   align-items: center;
   transition: transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .toggle-sidebar:hover {
@@ -91,10 +92,6 @@ body, html {
   text-decoration: none;
 }
 
-.site-title:hover {
-  background-color: rgb(180, 16, 153);
-}
-
 .site-title.move-when-menu-hidden {
   transform: translateX(-175px);
 }
@@ -108,6 +105,10 @@ body, html {
   width: 500px;
 }
 
+.header-buttons {
+  position: relative;
+}
+
 .header-buttons button {
   background: none;
   border: none;
@@ -118,80 +119,44 @@ body, html {
   position: relative;
 }
 
-/* Cart Tooltip (On Hover) */
-.cart-tooltip {
-  display: none;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 14px;
-  width: 200px;
-  top: 40px;
-  left: -60px;
+.cart {
+  position: relative;
 }
 
-.profile-tooltip {
-  display: none;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 14px;
-  width: 200px;
-  top: 40px;
-  left: -60px;
-}
-
-/* Cart Modal (On Click) */
-.cart-modal {
-  display: none;
-  position: fixed;
-  top: 0;
+.cart-dropdown {
+  display: none; /* Hidden by default */
+  position: absolute; /* Position it relative to the header buttons */
+  top: 100%; /* Position it below the Cart button */
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  width: 200px; /* Adjust the width as necessary */
+  padding-bottom: 10px;
+  padding-top: 10px;
+  background-color: rgb(230, 230, 230);
+  color: black;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.cart.cart:hover .cart-dropdown {
+  display: block;
+}
+
+.cart.cart:hover .cart-dropdown, .cart-dropdown:hover {
+  display: block;
+}
+
+.cart-dropdown p {
+  margin: 0;
+  padding: 5px 0;
+}
+
+.cart-dropdown .cart-page-button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: rgb(216, 41, 187);
   color: white;
-  padding: 50px;
-  z-index: 1000;
-}
-
-.cart-modal-content {
-  background-color: #333;
-  padding: 20px;
-  border-radius: 10px;
-  width: 300px;
-  margin: auto;
-}
-
-.cart-modal h2 {
-  font-size: 22px;
-  margin-bottom: 20px;
-}
-
-.cart-modal .close {
-  color: white;
-  font-size: 30px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-}
-
-.cart-modal button {
-  background-color: #ff9900;
-  color: white;
-  padding: 10px 20px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-}
-
-.cart-modal button:hover {
-  background-color: #cc7a00;
 }
 
 @media (max-width: 768px) {
