--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,13 +20,15 @@
         <div class="header-buttons">
             <button class="favorites">Favorites</button>
             <button class="cart">Cart</button>
-                <div class="cart-dropdown">
-                    <p>
-                        This is the cart Dropdown
-                    </p>
-                    <button class="cart-page-button">Go to cart</button>
-                </div>
             <button class="profile">Profile</button>
+
+            <!-- Cart Dropdown -->
+            <div class="cart-dropdown">
+                <p>
+                    This is the cart Dropdown
+                </p>
+                <button class="cart-page-button">Go to cart</button>
+            </div>
         </div>
 
     </header>
