--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,9 @@
                 <i class="fa fa-user" style="font-size:24px"></i>
             </button>
             <div class="profile-dropdown-unlogged">
+                <a href="/login">
                 <button class="login-button"> Login</button>
+                </a>
             </div> 
         </div>
 
