criação de logica do carrinho de compras

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,9 @@
                 <p>
                     Conteúdo do carrinho
                 </p>
-                <button class="cart-page-button">Go to cart</button>
+            <a href="/cart"> 
+                <button class="cart-page-button">Go to cart</button> 
+            </a>   
             </div>
             <!-- Profile button with user icon -->
             <button class="profile">
