--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -304,6 +304,24 @@ main {
   background-color: #f1f1f1;
 }
 
+.profile-dropdown-unlogged .register-button {
+  padding: 10px 20px;
+  width: 88%;
+  background-color: rgb(230, 230, 230);
+  color: black;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: left;
+}
+
+.profile-dropdown-unlogged .register-button:hover {
+  background-color: #f1f1f1;
+}
+
+
 /* Footer Styles */
 .footer {
   background-color: #161616;
