--- a/app/static/styles/register.css
+++ b/app/static/styles/register.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 /* Login and Register Form Styling */
-.login, .register {
+.register {
     display: flex;
     justify-content: center;
     align-items: center;
