--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/styles/base.css">
     <link rel="stylesheet" href="static/styles/login.css">
     <link rel="stylesheet" href="static/styles/register.css">
+    <link rel="stylesheet" href="static/styles/darkmode.css">
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -51,14 +52,21 @@
             </button>
             <div class="profile-dropdown-unlogged" id="profile-dropdown-unlogged">
                 <a href="/login">
-                    <button class="login-button">Login</button>
+                    <button class="login-button">
+                        <i class="fa fa-sign-in" style="margin-right: 8px;"></i>Login
+                    </button>
                 </a>
                 <a href="/register">
-                    <button class="register-button">Register</button>
+                    <button class="register-button">
+                        <i class="fa fa-user-plus" style="margin-right: 8px;"></i>Register
+                    </button>
                 </a>
             </div>
         </div>
     </header>
+
+    <!-- Dark Mode Button in a separate corner -->
+    <button class="toggle-darkmode">🌙</button>
 
     <div class="sidebar">
         <ul>
@@ -97,6 +105,7 @@
     <script src="static/scripts/sidebar.js"></script>
     <script src="static/scripts/search.js"></script>
     <script src="static/scripts/auth.js"></script>
+    <script src="static/scripts/darkmode.js"></script>
 
 </body>
 </html>
