--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,8 +5,7 @@
 {% block content %}
 
 <div class="login">
-
-    <form class="card" id="loginForm" method="POST" action="/login">
+    <form class="card" id="loginForm">
         <div class="card-header">
             <h2>Login</h2>
         </div>
@@ -30,10 +29,11 @@
 
         <!-- To show error message -->
         <div id="errorMessage" style="color: red; display: none;">
-            Invalid username or password.
+            Nome de usuário ou senha inválidos.
         </div>
     </form>
-
 </div>
+
+<script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 
 {% endblock %}
