--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,8 +5,7 @@
 {% block content %}
 
 <div class="register">
-
-    <form class="card" id="registerForm">
+    <form class="card" id="registerForm" method="POST" action="/register">
         <div class="card-header">
             <h2>Criar Conta</h2>
         </div>
@@ -15,11 +14,6 @@
             <div class="card-content-area">
                 <label for="username">Usuário</label>
                 <input type="text" id="username" name="username" autocomplete="off" required>
-            </div>
-
-            <div class="card-content-area">
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" autocomplete="off" required>
             </div>
 
             <div class="card-content-area">
@@ -40,10 +34,11 @@
 
         <!-- To show error message -->
         <div id="errorMessage" style="color: red; display: none;">
-            As senhas não coincidem ou o e-mail já está em uso.
+            As senhas não coincidem ou o nome de usuário já está em uso.
         </div>
     </form>
-
 </div>
+
+<script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 
 {% endblock %}
