--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Empresa Confiáveç{% endblock %}
+{% block title %}Home - Empresa Confiável{% endblock %}
 
 {% block content %}
 <div class="content-filler">
