--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -315,6 +315,30 @@ main {
 }
 
 
+.profile-dropdown-unlogged .logout-button {
+  padding: 10px 20px;
+  width: 88%;
+  background-color: rgb(230, 230, 230);
+  color: black;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: left;
+  display: flex; /* Ensure icons and text are aligned horizontally */
+  align-items: center; /* Vertically center the content */
+}
+
+.profile-dropdown-unlogged .logout-button i {
+  margin-right: 8px; /* Space between the icon and the text */
+}
+
+.profile-dropdown-unlogged .logout-button:hover {
+  background-color: #f1f1f1;
+}
+
+
 /* Footer Styles */
 .footer {
   background-color: #161616;
