Just removing the unnecessary cart

--- a/app/templates/base-logged.html
+++ b/app/templates/base-logged.html
@@ -42,7 +42,7 @@
             </button>
             <div class="cart-dropdown">
                 <p>Conteúdo do carrinho</p>
-                <a href="#">
+                <a href="/cart">
                     <button class="cart-page-button">Go to cart</button>
                 </a>
             </div>
