--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Empresa Confiável{% endblock %}</title>
-    <link rel="stylesheet" href="static/styles/base.css">
-    <link rel="stylesheet" href="static/styles/login.css">
-    <link rel="stylesheet" href="static/styles/register.css">
-    <link rel="stylesheet" href="static/styles/darkmode.css">
-    <link rel="stylesheet" href="static/styles/cart.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/register.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/darkmode.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/cart.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/product.css') }}">
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,7 +19,9 @@
         <div class="site-title">
             <a href="/">Empresa Confiável</a>
         </div>
+        <a href="/product/1">
         <button class="catalogue-button">Catalogue</button>
+        </a>
         <!-- Search Bar with Magnifying Glass Icon -->
         <div class="search-bar">
             <input type="text" autocomplete="off" id="searchInput" placeholder="Search...">
@@ -103,10 +106,11 @@
     </footer>
 
     <!-- Include the separated JavaScript files -->
-    <script src="static/scripts/sidebar.js"></script>
-    <script src="static/scripts/search.js"></script>
-    <script src="static/scripts/auth.js"></script>
-    <script src="static/scripts/darkmode.js"></script>
+    <script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/darkmode.js') }}"></script>
+
 
 </body>
 </html>
