--- a/app/static/styles/product.css
+++ b/app/static/styles/product.css
@@ -123,6 +123,28 @@ body, html {
     background-color: #c31c9b;
   }
   
+  .product-size {
+    margin-bottom: 20px;
+}
+
+.product-size label {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.product-size select {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 5px;
+    box-sizing: border-box;
+}
+
+
   /* Responsive Styles */
   @media (max-width: 768px) {
     .product-container {
