--- a/app/templates/base-admin.html
+++ b/app/templates/base-admin.html
@@ -85,10 +85,11 @@
     </footer>
 
     <!-- Include the separated JavaScript files -->
-    <script src="static/scripts/sidebar.js"></script>
-    <script src="static/scripts/search.js"></script>
-    <script src="static/scripts/auth.js"></script>
-    <script src="static/scripts/darkmode.js"></script>
+    <script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/darkmode.js') }}"></script>
+
 
 </body>
 </html>
