adicionando a pagina catalogo para o botão

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/darkmode.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/cart.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/product.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/catalogue.css') }}">
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -19,7 +20,7 @@
         <div class="site-title">
             <a href="/">Empresa Confiável</a>
         </div>
-        <a href="/product/1">
+        <a href="/catalogo">
         <button class="catalogue-button">Catalogue</button>
         </a>
         <!-- Search Bar with Magnifying Glass Icon -->
