--- a/app/templates/catalogue.html
+++ b/app/templates/catalogue.html
@@ -1,35 +1,40 @@
 {% extends "base.html" %}
 
-{% block title %}Cart{% endblock %}
+{% block title %}Catálogo de Produtos{% endblock %}
 
 {% block content %}
 
 <main class="catalog">
     <h1>Catálogo de Produtos</h1>
     
-    <div class="catalog-item" id="product-1">
-        <h2>Linho com cinto</h2>
-        <p class="product-description">Lindo linho com cinto ajustável.</p>
-        <p class="product-price">R$ 80,00</p>
-        <div class="product-quantity">
-            <label for="quantity-1">Quantidade:</label>
-            <input type="number" id="quantity-1" name="quantity-1" value="1" min="1" max="100">
-        </div>
-        <button class="add-to-cart-button" onclick="addToCart('Linho com cinto', 80.00, 'quantity-1')">Adicionar ao carrinho</button>
-    </div>
+    <div class="catalog-grid">
+        {% for product in PRODUCTS %}
+        <div class="catalog-item">
+            <!-- Product Image -->
+            <img src="{{ product.image }}" alt="{{ product.name }}" class="product-img">
+            
+            <!-- Product Name -->
+            <h2>{{ product.name }}</h2>
+            
+            <!-- Product Price -->
+            <p class="product-price">R$ {{ '%.2f' | format(product.price) }}</p>
 
-    <div class="catalog-item" id="product-2">
-        <h2>Cropped de manga</h2>
-        <p class="product-description">Cropped moderno para diversas ocasiões.</p>
-        <p class="product-price">R$ 50,00</p>
-        <div class="product-quantity">
-            <label for="quantity-2">Quantidade:</label>
-            <input type="number" id="quantity-2" name="quantity-2" value="1" min="1" max="100">
+            <!-- Sizes List as Circular Balls -->
+            <div class="product-sizes">
+                <h4>Tamanhos: 
+                    {% for size in product.sizes %}
+                        <span class="size-ball">{{ size }}</span>{% if not loop.last %} {% endif %}
+                    {% endfor %}
+                </h4>
+            </div>
+            
+            <!-- "See Details" Button -->
+            <a href="{{ url_for('product', product_id=product.id) }}">
+            <button class="see-details-button" onclick="viewDetails('{{ product.id }}')">Ver Detalhes</button>
+            </a>
         </div>
-        <button class="add-to-cart-button" onclick="addToCart('Cropped de manga', 50.00, 'quantity-2')">Adicionar ao carrinho</button>
+        {% endfor %}
     </div>
-
-    
 </main>
 
 {% endblock %}
