Atualizando as bases

--- a/app/templates/base-admin.html
+++ b/app/templates/base-admin.html
@@ -17,8 +17,9 @@
         <div class="site-title">
             <a href="/">Empresa Confiável</a>
         </div>
-        <button class="catalogue-button">Catalogue</button>
-        <!-- Search Bar with Magnifying Glass Icon -->
+        <a href="/catalogo">
+            <button class="catalogue-button">Catalogue</button>
+        </a>        <!-- Search Bar with Magnifying Glass Icon -->
         <div class="search-bar">
             <input type="text" autocomplete="off" id="searchInput" placeholder="Search...">
             <!-- Magnifying glass icon on the right -->
@@ -32,8 +33,6 @@
         </div>
   
         <div class="header-buttons">
-            <!-- Favorites button with heart icon -->
-            <button class="Products">Products</button>
             <!-- Profile button with user icon -->
             <button class="profile">
                 <i class="fa fa-user" style="font-size:24px"></i>
