--- a/app/templates/base-logged.html
+++ b/app/templates/base-logged.html
@@ -17,8 +17,9 @@
         <div class="site-title">
             <a href="/">Empresa Confiável</a>
         </div>
-        <button class="catalogue-button">Catalogue</button>
-        <!-- Search Bar with Magnifying Glass Icon -->
+        <a href="/catalogo">
+            <button class="catalogue-button">Catalogue</button>
+        </a>        <!-- Search Bar with Magnifying Glass Icon -->
         <div class="search-bar">
             <input type="text" autocomplete="off" id="searchInput" placeholder="Search...">
             <!-- Magnifying glass icon on the right -->
