--- a/app/templates/base-logged.html
+++ b/app/templates/base-logged.html
@@ -15,7 +15,7 @@
 
     <header class="header">
         <div class="site-title">
-            <a href="/">Empresa Confiável</a>
+            <a href="/user">Empresa Confiável</a>
         </div>
         <a href="/catalogo">
             <button class="catalogue-button">Catalogue</button>
@@ -66,7 +66,7 @@
 
     <div class="sidebar">
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/user">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
