--- a/app/static/styles/catalogue.css
+++ b/app/static/styles/catalogue.css
@@ -133,6 +133,47 @@ body {
     background-color: #e53935;
 }
 
+/* Styles for the "No Products" message */
+.no-products {
+    text-align: right;
+    font-size: 32px;
+    font-weight: bold;
+    color: #808080; /* Gray color */
+    padding: 10px;
+}
+
+.no-products-2 {
+    text-align: left;
+    font-size: 32px;
+    font-weight: bold;
+    color: #808080; /* Gray color */
+    padding: 10px;
+}
+
+/* Container for Add Product Button */
+.add-product-btn-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* Style for Add Product Button */
+.add-product-button {
+    background-color: #ff00a1; /* Green */
+    color: white;
+    border: none;
+    padding: 12px 30px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.add-product-button:hover {
+    background-color: #c31c9b;
+}
+
+
 /* Make it one column on small screens */
 @media (max-width: 768px) {
     .catalog-grid {
